H3CIPMSJAVA-20180830/src/objects/Bundle_Information__c.object
<CustomObject>
    <fields>
        <fullName>External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>General Product</label>
        <referenceTo>General_Product__c</referenceTo>
        <relationshipLabel>Bundle Information</relationshipLabel>
        <relationshipName>Bundle_InformationToGeneral_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Description__c</fullName>
        <label>Parent Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Number__c</fullName>
        <label>Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Date__c</fullName>
        <label>Shipping Date</label>
        <type>Date</type>
    </fields>
    <label>Bundle Information</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Serial Number</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>